removed 12.3.E processes